--- a/public/personal.html
+++ b/public/personal.html
@@ -15,6 +15,39 @@
   <title>Perfil</title>
 </head>
 <body onload="carregarDadosPerfil()">
+  
+<div id="overlay"></div>
+  <div id="modal">
+    <h2 id="spanTitle">
+        Alterações realizadas com
+        <span id="spanStatus">
+            sucesso 
+        </span>
+        🍃
+    </h2>
+
+      <p id="changesDescription">
+        Estamos felizes que conseguiu realizar suas alterações, mas note que a conta adm relacionada a você receberá uma notificação relacionada a alteração.
+      </p>
+      <button id="close-modal">
+        Concluído
+      </button>
+  
+    </div>
+<div id="overlaySenha"></div>
+    <div id="modalSenha">
+      <h2 id="spanTitleSenha">
+          Verifique a senha 🔒
+      </h2>
+        <p>
+          Antes de realizarmos a alteração da senha, por favor insira a confirmação dela abaixo.
+        </p>
+        <input id="inputPasswordConfirmation" type="password">
+        <button onclick="sendPasswordConfirmation()">
+          Enviar
+        </button>
+      </div>
+  
   <div class="mobile-nav-bar" id="mobile_nav_bar" style="display: flex;">
 
     <div class="logo-nav-container">
@@ -166,36 +199,52 @@
                 <div style="width: 100%; display: flex; gap: 30px; align-items: center; justify-content: space-between;">
                     <h1>Nome</h1>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path onclick="changeUserName()" d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                     </svg>
                 </div>
-                <input disabled class="disabled" value="" id="inputNomeUsuario" type="text">
+                <input disabled class="disabled"  id="inputNomeUsuario" type="text">
             </div>
             <div class="user-names-box">
                 <div style="width: 100%; display: flex; gap: 30px; align-items: center; justify-content: space-between;">
                     <h1>Email</h1>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <svg onclick="changeUserEmail()"  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                     </svg>
                 </div>
-                <input disabled class="disabled"  value="" id="inputEmailUsuario" type="text">
+                <input disabled class="disabled"   id="inputEmailUsuario" type="text">
             </div>
         </div>
-        <div class="user-names-box">
-            <div style="width: 100%; display: flex; gap: 30px; align-items: center; justify-content: space-between;">
-                <h1>Cargo</h1>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                </svg>
+        <div class="user-names-container">
+            <div class="user-names-box">
+                <div style="width: 100%; display: flex; gap: 30px; align-items: center; justify-content: space-between;">
+                    <h1>Cargo</h1>
+                    <svg onclick="changeUserRole()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                    </svg>
+                </div>
+                <select disabled class="disabled" id="selectCargoUsuario">
+                    <option value="donoDeTudo">Dono da porra toda</option>
+                </select>
             </div>
-            <select disabled class="disabled" id="selectCargoUsuario">
-                <option value="donoDeTudo">Dono da porra toda</option>
-            </select>
+            <div class="user-names-box">
+                <div style="width: 100%; display: flex; gap: 30px; align-items: center; justify-content: space-between;">
+                    <h1>Senha</h1>
+                    <svg onclick="changeUserPassword()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                    </svg>
+                </div>
+                <input disabled class="disabled"   id="inputSenhaUsuario" type="password">
+            </div>
         </div>
-        
+        <div class="save-infos-row">
+            <button id="saveChangesButton" onclick="saveChanges()">
+                Salvar
+            </button>
+        </div>
     </div>
 </div>
 
