--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -34,13 +34,13 @@
 
         <div class="nav-bar-links-container" style="display: none;">
 
-            <a class="nav-selected" href="./paginaPrincipal.html" openSidebar();">
+            <a class="nav-selected" href="./paginaPrincipal.html">
                 Página Inicial
             </a>
             <a onclick="goToComentarios(); openSidebar();">
                 Comentários
             </a>
-            <a onclick="goToCadastrar(); openSidebar();">
+            <a href="./cadastroPersona.html">
                 Cadastrar
             </a>
             <div onmouseenter="showNotifications()"  class="contem-alerta">
