--- a/public/personal.html
+++ b/public/personal.html
@@ -62,10 +62,10 @@
 
     <div class="nav-bar-links-container" style="display: none;">
 
-        <a class="nav-selected" href="./paginaPrincipal.html">
+        <a href="./paginaPrincipal.html">
             Página Inicial
         </a>
-        <a onclick="goToComentarios(); openSidebar();">
+        <a href="./cadastroPersona.html">
             Comentários
         </a>
         <a onclick="goToCadastrar(); openSidebar();">
@@ -171,7 +171,7 @@
     <div class="left-side-container">
         <div class="user-static-infos-container">
             <div class="icon-background">
-                <img id="userIcon" height="80%" width="100%" src="https://bawclothing.vtexassets.com/arquivos/ids/268608/0069458046_02.jpg?v=638786183995330000" alt="Icone">
+                <img id="userIcon" src="https://bawclothing.vtexassets.com/arquivos/ids/268608/0069458046_02.jpg?v=638786183995330000" alt="Icone">
             </div>
             <div class="user-static-infos">
                 <h3 id="userName"></h3>
