adiciona a tela de login adm  com responsividade

--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
     <link rel="icon" href="./assets/logo.svg">
-    <title>Página Inicial</title>
+    <title>Dashboard</title>
 </head>
 
 <body>
