melhoria na index

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -18,7 +18,7 @@
 <body class="body">
   <div class="default-nav-bar">
     <div class="logo-nav-container">
-      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <div class="default-nav-links-container">
       <a onclick="goToHistory()">
@@ -42,7 +42,7 @@
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
-      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <button onclick="openSidebar()">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -196,7 +196,6 @@
 
           Nós acreditamos que um ar mais puro significa uma vida melhor!
         </p>
-        <img class="pessoas" src="./assets/historia.jpg" alt="">
       </div>
   </div>
 <!--   <hr class="separator-row"> !-->
