Esqueci de colocar a div para sinalizar os filtros

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -237,6 +237,10 @@
 
         <div class="filtro">
 
+            <div class ="filtroSelecionado">
+                <h1>(MÊS) (ANO) (MUNICIPIO PRINCIAL)</h1>
+            </div>
+
             <!-- AO CLICAR VAI ABRIR UMA DIV NO CENTRO COM OS GRÁFICOS E O FUNDO FICARÁ DESFOCADO -->
             <div class="filtro-aplicado" style="display: flex;" id="id_filtro_aplicado" onclick="abrirFiltro()">
 
