--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/cadastroPersona.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="./assets/logo.svg">
+    <link rel="icon" href="./assets/logo-sem-bg.svg">
     <title>Cadastrar colaboradores</title>
 </head>
 
@@ -22,12 +22,12 @@
 
     <div class="mobile-nav-bar" id="mobile_nav_bar" style="display: flex;">
 
-        <div class="logo-nav-container">
-            <img id="id-logo-nav-bar" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <div class="logo-nav-container" onclick="goToHome()">
+            <img id="id-logo-nav-bar" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
         </div>
 
-        <div class="img-nav-alerta">
-            <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
+        <div class="img-nav-alerta" onclick="goToNotification()">
+            <img id="id-img-nav-alerta" width="40%" height="40%" src="./assets/img-notificacao.png" alt="Imagem de Notificações">
         </div>
 
         <!-- NAV BAR DESKTOP -->
@@ -43,15 +43,15 @@
             <a class="nav-selected"  onclick="goToCadastrar(); openSidebar();">
                 Cadastrar
             </a>
-            <div onmouseenter="showNotifications()" class="contem-alerta">
+            <div onclick="showNotifications()" class="contem-alerta">
                 <div class="img-nav-alerta2">
                     <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
                         alt="Imagem de Notificações">
                 </div>
-                <a onclick="goToAlertas();">
+                <a>
                     Notificações
                 </a>
-                <div class="notification-dropdown" onmouseleave="hideNotifications()">
+                <div class="notification-dropdown">
                     <div class="notification-dropdown-options">
                         <div class="notification-container">
                             <span>27/02/2025 13:26</span>
@@ -76,13 +76,13 @@
             </div>
 
         </div>
-        <div onmouseenter="showUserOptions()" class="user-container" style="display: none;">
+        <div onclick="showUserOptions()" class="user-container" style="display: none;">
             <div class="user-infos">
                 <img id="id-img-user options" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
                 <span>Dono de tudo</span>
             </div>
 
-            <div class="user-dropdown-options" onmouseleave="hideUserOptions()">
+            <div class="user-dropdown-options">
                 <button onclick="goToPersonal()">Dados Pessoais</button>
                 <button>Filtros Salvos</button>
                 <div class="theme-switch-wrapper">
@@ -100,13 +100,11 @@
                 </div>
                 <button id="disconectButton">Desconectar</button>
             </div>
-
         </div>
-
         <!-- FIM NAV BAR -->
 
         <button id="id-button-nav-bar" onclick="openSidebar()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="60%" height="60%" fill="currentColor"
+            <svg xmlns="http://www.w3.org/2000/svg" width="40%" height="40%" fill="currentColor"
                 class="bi bi-layout-text-window-reverse" viewBox="0 0 16 16">
                 <path
                     d="M13 6.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5m0 3a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5m-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1z" />
@@ -120,8 +118,8 @@
 
         <div id="sideBar" class="side-bar">
 
-            <div class="img-side-bar">
-                <img width="40%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+            <div class="img-side-bar" onclick="goToHome()">
+                <img width="40%" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
             </div>
             <div class="side-bar-links-container">
                 <a onclick="goToPaginaInicial(); openSidebar();">
