--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -221,72 +221,77 @@
                     <!-- Tentei fazer o filtro funcionar mas n consegui, pelo menos tentei estruturar cada um em uma DIV -->
 
                     <div class="filtro-text">
-                        <div id="municipio-principal">
-                            <label>Região principal:</label>
-                            <select id="regiao-principal">
-                                <option disabled selected>Selecione</option>
-                                <option value="São Paulo">São Paulo</option>
-                                <option value="Guarulhos">Guarulhos</option>
-                                <option value="São Bernado">São Bernado</option>
-                                <option value="Santo André">Santo André</option>
-                            </select>
+                        <div class="titulo-filtro">
+                            <h1>Município Principal</h1>
                         </div>
-
-                    </div>
-                    <div class="filtro-text">
-                        <div id="municipio-secundario">
-                            <label>Regiões secundárias:</label>
-                            <select multiple size="4" id="regioes-secundarias">
-                                <option disabled selected>Selecione</option>
-                                <option value="São Paulo">São Paulo</option>
-                                <option value="Guarulhos">Guarulhos</option>
-                                <option value="São Bernado">São Bernado</option>
-                                <option value="Santo André">Santo André</option>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt">
+                                <option value="#"></option>
+                                <option value="">São Paulo</option>
+                                <option value="">Santo Andre</option>
+                                <option value="">São Caetano</option>
+                                <option value="">Campinas</option>
+                                <option value="">Piracicaba</option>
                             </select>
                         </div>
                     </div>
                     <div class="filtro-text">
-                        <div id="div-mes">
-                            <label>Mês:</label>
-                            <select id="select-mes">
-                                <option disabled selected>Selecione</option>
-                                <option value="Janeiro">Janeiro</option>
-                                <option value="Fevereiro">Fevereiro</option>
-                                <option value="Março">Março</option>
-                                <option value="Abril">Abril</option>
-                                <option value="Maio">Maio</option>
-                                <option value="Junho">Junho</option>
-                                <option value="Julho">Julho</option>
-                                <option value="Agosto">Agosto</option>
-                                <option value="Setembro">Setembro</option>
-                                <option value="Outubro">Outubro</option>
-                                <option value="Novembro">Novembro</option>
-                                <option value="Dezembro">Dezembro</option>
+                        <div class="titulo-filtro">
+                            <h1>Região Desejada</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt">
+                                <option value="#"></option>
+                                <option value="">Sul</option>
+                                <option value="">Centro-Oeste</option>
+                                <option value="">Norte</option>
+                                <option value="">Nordeste</option>
+                                <option value="">Leste</option>
                             </select>
                         </div>
                     </div>
                     <div class="filtro-text">
-                        <div id="div-ano">
-                            <label>Ano</label>
-                            <select id="select-ano">
-                                <option disabled selected>Selecione</option>
-                                <option value="2024">2024</option>
-                                <option value="2023">2023</option>
-                                <option value="2022">2022</option>
+                        <div class="titulo-filtro">
+                            <h1>Ano Desejado</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt">
+                                <option value="#"></option>
+                                <option value="">2024</option>
+                                <option value="">2023</option>
+                                <option value="">2022</option>
+                                <option value="">2021</option>
+                                <option value="">2020</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Mês Desejado</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt">
+                                <option value="#"></option>
+                                <option value="">Janeiro</option>
+                                <option value="">Fevereiro</option>
+                                <option value="">Março</option>
+                                <option value="">Abril</option>
+                                <option value="">Maio</option>
+                                <option value="">Junho</option>
+                                <option value="">Julho</option>
+                                <option value="">Agosto</option>
+                                <option value="">Setembro</option>
+                                <option value="">Outubro</option>
+                                <option value="">Novembro</option>
+                                <option value="">Dezembro</option>
                             </select>
                         </div>
                     </div>
 
                     <div class="filtro-btn">
-                        <div class="filtro-btn-1">
-
-                        </div>
-                        <div class="filtro-btn-1">
-
-                        </div>
-                        <div class="filtro-btn-1">
-
-                        </div>
+                        
+                        <h1>Adicionar Filtro</h1>
+                        
                     </div>
 
                 </div>
